<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainActivityContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <!--<android.support.design.widget.CollapsingToolbarLayout-->
            <!--android:id="@+id/collapsing_toolbar"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways"
            >
            <!--<Button-->
                <!--android:id="@+id/categoryButton1"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="test"-->
                <!--/>-->

            <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:paddingLeft="25dp"-->
                <!--android:paddingRight="25dp"-->
                <!--&gt;-->
                <!--<TextView-->
                    <!--android:id="@+id/categoryButton"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center_vertical"-->
                    <!--android:textSize="20sp"-->
                    <!--android:textStyle="bold"-->
                    <!--android:textColor="@color/white"-->
                    <!--android:focusable="false"-->
                    <!--android:paddingRight="10dp"-->
                    <!--/>-->
                <!--<ImageView-->
                    <!--android:id="@+id/categoryButtonImage"-->
                    <!--android:layout_width="20dp"-->
                    <!--android:layout_height="20dp"-->
                    <!--android:layout_gravity="center_vertical"-->
                    <!--android:scaleX="1.2"-->
                    <!--android:scaleY="1.2"-->
                    <!--android:src="@drawable/menu_down"/>-->
            <!--</LinearLayout>-->

        </androidx.appcompat.widget.Toolbar>

        <!--</android.support.design.widget.CollapsingToolbarLayout>-->

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/selectabletabbackgroundstyle"
            app:tabSelectedTextColor="@color/white"
            app:tabRippleColor="@color/colorPrimary"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         />

</androidx.coordinatorlayout.widget.CoordinatorLayout>