...
    <string name="category_working">Working</string>
    <string name="category_learning">Learning</string>
    <string name="category_meeting">Meeting</string>
    <string name="category_appointment">Appointment</string>
    <string name="category_shopping">Shopping</string>
    <string name="category_other">Other</string>
    <string name="tab_title_todo">To Do</string>
    <string name="tab_title_done">Done</string>
    <string name="filter_by_category">Filter By category</string>
    <string name="category_all_display">All</string>
    <string name="category_default_display">Default</string>
    <string name="category_working_display">Working</string>
    <string name="category_learning_display">Learning</string>
    <string name="category_meeting_display">Meeting</string>
...
